--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -27,7 +27,7 @@ $ oc label configmap grafana-dashboard-devspaces-server console.openshift.io/das
 
 .Verification steps
 
-. In the *Administrator* view of the OpenShift web console, navigate to *Observe* -> *Dashboards* from the sidebar menu on the left.
+. In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Dashboards*.
 
 . Select the *Dev Workspace Operator* dashboard under the *Dashboard* dropdown menu and verify that the dashboard panels contain data.
 +
