--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -3,7 +3,7 @@
 [id="viewing-{prod-id-short}-metrics-on-grafana-dashboards"]
 = Viewing {prod-short} Server from an OpenShift web console dashboard
 
-After configuring the in-cluster Prometheus instance to collect {prod-short} Server JVM metrics, the metrics can be viewed from a custom dashboard within the *Administrator* perspective of the OpenShift web console.
+After configuring the in-cluster Prometheus instance to collect {prod-short} Server JVM metrics, you can view the metrics on a custom dashboard in the *Administrator* perspective of the OpenShift web console.
 
 .Prerequisites
 
