--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -29,7 +29,7 @@ $ oc label configmap grafana-dashboard-devspaces-server console.openshift.io/das
 
 . In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Dashboards*.
 
-. Select the *Dev Workspace Operator* dashboard under the *Dashboard* dropdown menu and verify that the dashboard panels contain data.
+. Go to *Dashboard* -> *Dev Workspace Operator* and verify that the dashboard panels contain data.
 +
 .Quick Facts
 image::monitoring/monitoring-che-che-server-jvm-dashboard-quick-facts.png[The *JVM quick facts* panel, link="{imagesdir}/monitoring/monitoring-che-che-server-jvm-dashboard-quick-facts.png"]
