--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -25,6 +25,6 @@ $ oc label configmap grafana-dashboard-dwo console.openshift.io/dashboard=true -
 
 .Verification steps
 
-. In the *Administrator* view of the OpenShift web console, navigate to *Observe* -> *Dashboards* from the sidebar menu on the left.
+. In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Dashboards*.
 
 . Select the *Che Server JVM* dashboard under the *Dashboard* dropdown menu and verify that the dashboard panels contain data.
