--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -27,4 +27,4 @@ $ oc label configmap grafana-dashboard-dwo console.openshift.io/dashboard=true -
 
 . In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Dashboards*.
 
-. Select the *Che Server JVM* dashboard under the *Dashboard* dropdown menu and verify that the dashboard panels contain data.
+. Go to *Dashboard* -> *Che Server JVM* and verify that the dashboard panels contain data.
