--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -15,11 +15,19 @@ After configuring the in-cluster Prometheus instance to collect {devworkspace} O
 
 . Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
 +
-[source,terminal,subs="+attributes,quotes"]
+.. {empty}
++
+[source,subs="+quotes"]
 ----
 $ oc create configmap grafana-dashboard-dwo \
   --from-literal=dwo-dashboard.json="$(curl https://raw.githubusercontent.com/devfile/devworkspace-operator/main/docs/grafana/openshift-console-dashboard.json)" \
   -n openshift-config-managed
+----
+
+.. {empty}
++
+[source,subs="+quotes"]
+----
 $ oc label configmap grafana-dashboard-dwo console.openshift.io/dashboard=true -n openshift-config-managed
 ----
 
