--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -91,7 +91,7 @@ $ {orch-cli} patch checluster {prod-checluster} \
 [source,shell,subs="+quotes,macros,attributes"]
 ----
 $ {orch-cli} patch checluster {prod-checluster} \
-  --patch '{"spec": {"components": {"cheServer": {"extraProperties": {"CHE_INFRA_KUBERNETES_USER\__CLUSTER__ROLES": "'${USER_ROLES}'"}}}}}' \
+  --patch '{"spec": {"devEnvironments": {"user": {"clusterRoles": ["'${USER_ROLES}'"]}}}}' \
   --type=merge -n {prod-namespace}
 ----
 NOTE: The user has to log in and log out to have the new roles applied.
