--- a/modules/end-user-guide/examples/snip_che-ide-default-yaml-file.adoc
+++ b/modules/end-user-guide/examples/snip_che-ide-default-yaml-file.adoc
@@ -1,4 +1,4 @@
 :_content-type: SNIPPET
 
-* The default `devfile.yaml` file featuring settings for the supported IDEs is available link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[here].
+* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[The che-editors.yaml file] features the devfiles of all supported IDEs.
 
