--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -23,7 +23,8 @@ $ oc create configmap grafana-dashboard-dwo \
   --from-literal=dwo-dashboard.json="$(curl https://raw.githubusercontent.com/devfile/devworkspace-operator/main/docs/grafana/openshift-console-dashboard.json)" \
   -n openshift-config-managed
 ----
-
++
+include::example$snip_{project-context}-disclaimer-for-configuring-observability.adoc[]
 .. {empty}
 +
 [source,subs="+quotes"]
