--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -94,4 +94,7 @@ $ {orch-cli} patch checluster {prod-checluster} \
   --patch '{"spec": {"devEnvironments": {"user": {"clusterRoles": ["'${USER_ROLES}'"]}}}}' \
   --type=merge -n {prod-namespace}
 ----
-NOTE: The user has to log in and log out to have the new roles applied.
+
+Wait until the rollout of {prod-short} server components finishes.
+
+NOTE: The user has to log out and log in to have the new roles applied.
