--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -48,7 +48,7 @@ spec:
 +
 [source,terminal,subs="+attributes,quotes"]
 ----
-oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
+$ oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
 ----
 
 .Verification
