--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -46,7 +46,7 @@ spec:
 
 . Allow the in-cluster Prometheus instance to detect the ServiceMonitor in the {prod-short} namespace. The default {prod-short} namespace is `{prod-namespace}`.
 +
-[source,terminal,subs="+attributes,quotes"]
+[source,subs="+attributes"]
 ----
 $ oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
 ----
