--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -25,6 +25,8 @@ $ oc create configmap grafana-dashboard-devspaces-server \
   --from-literal=devspaces-server-dashboard.json="$(curl https://raw.githubusercontent.com/eclipse-che/che-server/main/docs/grafana/openshift-console-dashboard.json)" \
   -n openshift-config-managed
 ----
++
+include::example$snip_{project-context}-disclaimer-for-configuring-observability.adoc[]
 
 .. {empty}
 +
