--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -95,7 +95,7 @@ roleRef:
 +
 [source,terminal,subs="+attributes,quotes"]
 ----
-oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
+$ oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
 ----
 
 .Verification
