--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -27,6 +27,8 @@ $ oc create configmap grafana-dashboard-devspaces-server \
 ----
 +
 include::example$snip_{project-context}-disclaimer-for-configuring-observability.adoc[]
++
+include::example$snip_{project-context}-disclaimer-for-configuring-observability.adoc[]
 
 .. {empty}
 +
