--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -36,6 +36,8 @@ include::example$snip_{project-context}-disclaimer-for-configuring-observability
 ----
 $ oc label configmap grafana-dashboard-devspaces-server console.openshift.io/dashboard=true -n openshift-config-managed
 ----
++
+NOTE: The dashboard definition is based on Grafana 6.x dashboards. Not all Grafana 6.x dashboard features are supported in the OpenShift web console.
 
 .Verification steps
 
