--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -95,6 +95,6 @@ $ {orch-cli} patch checluster {prod-checluster} \
   --type=merge -n {prod-namespace}
 ----
 
-Wait until the rollout of {prod-short} server components finishes.
+. Wait for the rollout of the {prod-short} server components to be completed.
 
-NOTE: The user has to log out and log in to have the new roles applied.
+. Ask the user to log out and log in to have the new roles applied.
