--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -88,7 +88,7 @@ $ {orch-cli} patch checluster {prod-checluster} \
 
 . Configure {prod-deployment} server to delegate the roles to a user:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,macros,attributes"]
 ----
 $ {orch-cli} patch checluster {prod-checluster} \
   --patch '{"spec": {"devEnvironments": {"user": {"clusterRoles": ["'${USER_ROLES}'"]}}}}' \
