--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -79,7 +79,7 @@ EOF
 
 . Configure {prod-short} operator to delegate the roles to the `che` service account:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,macros,attributes"]
 ----
 $ {orch-cli} patch checluster {prod-checluster} \
   --patch '{"spec": {"components": {"cheServer": {"clusterRoles": ["'${USER_ROLES}'"]}}}}' \
