--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -56,7 +56,7 @@ EOF
 
 . Delegate the roles to the {prod-short} operator:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,macros,attributes"]
 ----
 $ {orch-cli} apply -f - <<EOF
 kind: ClusterRoleBinding
