--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -32,7 +32,7 @@ $ OPERATOR_NAMESPACE=$({orch-cli} get pods -l app.kubernetes.io/component={prod-
 
 . Create needed roles:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,macros,attributes"]
 ----
 $ {orch-cli} apply -f - <<EOF
 kind: ClusterRole
