--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -17,7 +17,7 @@ You can customize the user roles in {prod-short} by creating new roles.
 
 . Define the user roles name:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,macros,attributes"]
 ----
 $ USER_ROLES=__<name>__ <1>
 ----
