--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -25,7 +25,7 @@ $ USER_ROLES=__<name>__ <1>
 
 . Find out the namespace where the {prod-short} operator is deployed:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,macros,attributes"]
 ----
 $ OPERATOR_NAMESPACE=$({orch-cli} get pods -l app.kubernetes.io/component={prod-operator} -o jsonpath={".items[0].metadata.namespace"} --all-namespaces)
 ----
