--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -1,11 +1,11 @@
 :_content-type: PROCEDURE
-:description: Customizing user roles
+:description: Configuring cluster roles for {prod-short} users
 :keywords: administration-guide, user, roles, permissions
-:navtitle: Customizing user roles
-:page-aliases: .:customizing-user-roles.adoc, customizing-user-roles.adoc
+:navtitle: Configuring cluster roles for {prod-short} users
+:page-aliases:
 
-[id="customizing-user-roles"]
-= Customizing user roles
+[id="configuring-cluster-roles-for-users"]
+= Configuring cluster roles for {prod-short} users
 
 You can customize the user roles in {prod-short} by creating new roles.
 
