Replace two AsciIDoc periods with AsciiDoc asterisks.

--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -13,7 +13,7 @@ After configuring the in-cluster Prometheus instance to collect {devworkspace} O
 
 .Procedure
 
-. Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
+* Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
 .. {empty}
 +
 [source,subs="+quotes"]
