--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -15,7 +15,7 @@ After configuring the in-cluster Prometheus instance to collect {prod-short} Ser
 
 .Procedure
 
-. Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
+* Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
 .. {empty}
 +
 [source,subs="+quotes"]
