--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -1,27 +1,46 @@
 // monitoring-{prod-id-short}
 
 [id="viewing-{prod-id-short}-metrics-on-grafana-dashboards"]
-= Viewing {prod-short} Server metrics on Grafana dashboards
+= Viewing {prod-short} Server from an OpenShift web console dashboard
 
-To view the {prod-short} Server metrics on Grafana:
+After configuring the in-cluster Prometheus instance to collect {prod-short} Server JVM metrics, you can view the metrics on a custom dashboard in the *Administrator* perspective of the OpenShift web console.
 
 .Prerequisites
 
-* Prometheus is collecting metrics on the {prod-short} cluster. See xref:monitoring-with-prometheus-and-grafana.adoc[].
+* Your organization's instance of {prod-short} is installed and running in Red Hat OpenShift.
 
-* Grafana 6.0 or later is running on port `3000` with a corresponding Service. See link:https://grafana.com/docs/grafana/latest/installation/kubernetes/[Installing Grafana].
+* An active `oc` session with administrative permissions to the destination OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the CLI].
 
+* The in-cluster Prometheus instance is collecting metrics. See xref:collecting-che-metrics-with-prometheus[].
 
 .Procedure
 
-. Add the data source for the Prometheus instance. See link:https://prometheus.io/docs/visualization/grafana/#creating-a-prometheus-data-source[Creating a Prometheus data source].
-
-. Import the example link:https://github.com/eclipse-che/che-server/blob/7.44.x/docs/grafana/dashboard.json[dashboard]. See link:https://grafana.com/docs/grafana/latest/dashboards/export-import/#import-dashboard[Import dashboard].
-
-. View the {prod-short} JVM metrics in the Grafana console:
+* Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
+.. {empty}
 +
-.{prod-short} server JVM dashboard
-image::monitoring/monitoring-che-che-server-jvm-dashboard.png[The *{prod-short} server JVM* dashboard, link="{imagesdir}/monitoring/monitoring-che-che-server-jvm-dashboard.png"]
+[source,subs="+quotes"]
+----
+$ oc create configmap grafana-dashboard-devspaces-server \
+  --from-literal=devspaces-server-dashboard.json="$(curl https://raw.githubusercontent.com/eclipse-che/che-server/main/docs/grafana/openshift-console-dashboard.json)" \
+  -n openshift-config-managed
+----
++
+include::example$snip_{project-context}-disclaimer-for-configuring-observability.adoc[]
+
+.. {empty}
++
+[source,subs="+quotes"]
+----
+$ oc label configmap grafana-dashboard-devspaces-server console.openshift.io/dashboard=true -n openshift-config-managed
+----
++
+NOTE: The dashboard definition is based on Grafana 6.x dashboards. Not all Grafana 6.x dashboard features are supported in the OpenShift web console.
+
+.Verification steps
+
+. In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Dashboards*.
+
+. Go to *Dashboard* -> *Dev Workspace Operator* and verify that the dashboard panels contain data.
 +
 .Quick Facts
 image::monitoring/monitoring-che-che-server-jvm-dashboard-quick-facts.png[The *JVM quick facts* panel, link="{imagesdir}/monitoring/monitoring-che-che-server-jvm-dashboard-quick-facts.png"]
