--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -50,7 +50,7 @@ rules:
       - __<resources>__ <3>
 EOF
 ----
-<1> Verbs is a list of Verbs that apply to ALL the ResourceKinds and AttributeRestrictions contained in this rule. '*' represents all verbs.
+<1> As `__<verbs>__`,  list all Verbs that apply to all ResourceKinds and AttributeRestrictions contained in this rule. You can use `*` to represent all verbs.
 <2> APIGroups is the name of the APIGroup that contains the resources.
 <3> Resources is a list of resources this rule applies to. '*' represents all resources.
 
