--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -52,7 +52,7 @@ EOF
 ----
 <1> As `__<verbs>__`,  list all Verbs that apply to all ResourceKinds and AttributeRestrictions contained in this rule. You can use `*` to represent all verbs.
 <2> As `__<apiGroups>__`, name the APIGroups that contain the resources.
-<3> Resources is a list of resources this rule applies to. '*' represents all resources.
+<3> As `__<resources>__`, list all resources that this rule applies to. You can use `*` to represent all verbs.
 
 . Delegate the roles to the {prod-short} operator:
 +
