--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -77,7 +77,7 @@ EOF
 
 ----
 
-. Configure {prod-short} operator to delegate the roles to the `che` service account:
+. Configure the {prod-short} Operator to delegate the roles to the `che` service account:
 +
 [source,subs="+quotes,macros,attributes"]
 ----
