--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -23,7 +23,7 @@ $ USER_ROLES=__<name>__ <1>
 ----
 <1> Unique resource name.
 
-. Find out the namespace where the {prod-short} operator is deployed:
+. Find out the namespace where the {prod-short} Operator is deployed:
 +
 [source,subs="+quotes,macros,attributes"]
 ----
