--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -54,7 +54,7 @@ EOF
 <2> As `__<apiGroups>__`, name the APIGroups that contain the resources.
 <3> As `__<resources>__`, list all resources that this rule applies to. You can use `*` to represent all verbs.
 
-. Delegate the roles to the {prod-short} operator:
+. Delegate the roles to the {prod-short} Operator:
 +
 [source,subs="+quotes,macros,attributes"]
 ----
