--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -14,7 +14,7 @@ To use the in-cluster Prometheus instance to collect, store, and query metrics a
 
 .Procedure
 
-. Create the ServiceMonitor for detecting the Dev Workspace Operator metrics Service
+. Create the ServiceMonitor for detecting the Dev Workspace Operator metrics Service.
 +
 .ServiceMonitor
 ====
