--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -86,7 +86,7 @@ $ {orch-cli} patch checluster {prod-checluster} \
   --type=merge -n {prod-namespace}
 ----
 
-. Configure the {prod-deployment} server to delegate the roles to a user:
+. Configure the {prod-short} server to delegate the roles to a user:
 +
 [source,subs="+quotes,macros,attributes"]
 ----
