--- a/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
+++ b/modules/administration-guide/pages/configuring-user-cluster-roles.adoc
@@ -7,7 +7,7 @@
 [id="configuring-cluster-roles-for-users"]
 = Configuring cluster roles for {prod-short} users
 
-You can customize the user roles in {prod-short} by creating new roles.
+You can grant your {prod-short} users more cluster permissions by adding cluster roles to your {prod-short} users.
 
 .Prerequisites
 
